Issue gameboard pg fix width not 100% on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ html, body {
   text-align: center;
   color: #2c3e50;
   margin-top: 20px;
+  width:100%;
 }
 
  a {
